update funzione filtro

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,11 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import pickle\n",
     "from shapely import Point\n",
     "import geopandas as gpd\n",
     "\n",
@@ -238,21 +239,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_list = [\n",
     "    {\"gdf\":  gpd.read_file(PATH_PARCHI_CLEAN),\n",
-    "     \"tipo\": \"parchi\"},\n",
-    "     {\"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
-    "     \"tipo\": \"Aree gioco\"},\n",
+    "     \"tipo\": \"parchi\",\n",
+    "     \"attr\": {\"priorita\": 1}},\n",
     "     {\"gdf\":  gpd.read_file(PATH_IMPIANTI_SPORTIVI_CLEAN),\n",
-    "     \"tipo\": \"Impianti sportivi\"}\n",
-    "     \n",
+    "     \"tipo\": \"impianti_sportivi\",\n",
+    "     \"attr\": {\"priorita\": 2}},\n",
+    "     {\"gdf\":  gpd.read_file(PATH_AREE_GIOCO_CLEAN),\n",
+    "     \"tipo\": \"aree_gioco\",\n",
+    "     \"attr\": {\"priorita\": 3}} \n",
     "]\n",
-    "Graph_functions.auto_analysis_poi(gdf_list, PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+    "Graph_functions.auto_analysis_poi(gdf_list,\n",
+    "                                  PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING,\n",
+    "                                  PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06431cc9",
+   "metadata": {},
+   "source": [
+    "Proviamo a richiedere la versione \"ridotta\" dei poi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "45efc912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING, \"rb\") as file:\n",
+    "    G_sport = pickle.load(file)\n",
+    "\n",
+    "Graph_functions.auto_filter_poi(G_percorsi=G_sport,\n",
+    "                                max_pois=2493,\n",
+    "                                PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING,\n",
+    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
    ]
   },
   {
@@ -265,12 +294,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87e261e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1017"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gdf_analisi_sport[gdf_analisi_sport[\"artificial\"] == True])"
    ]
   },
   {
@@ -283,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -311,10 +361,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "04596a5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               length\n",
+      "highway                              \n",
+      "cycleway                   106.136907\n",
+      "footway                    103.867943\n",
+      "residential                 19.204149\n",
+      "tertiary                    10.608167\n",
+      "secondary                    9.876533\n",
+      "primary                      4.163965\n",
+      "service                      3.504462\n",
+      "path                         2.804117\n",
+      "track                        2.572541\n",
+      "pedestrian                   2.249762\n",
+      "footway steps                0.864656\n",
+      "footway service              0.609993\n",
+      "cycleway footway             0.502098\n",
+      "residential cycleway         0.433831\n",
+      "residential footway          0.423629\n",
+      "footway pedestrian           0.389862\n",
+      "footway path                 0.331549\n",
+      "proposed footway service     0.320628\n",
+      "unclassified                 0.307231\n",
+      "cycleway path                0.290587\n",
+      "residential secondary        0.276889\n",
+      "track service                0.234979\n",
+      "pedestrian path              0.190611\n",
+      "residential service          0.153563\n",
+      "service path                 0.150053\n",
+      "tertiary_link                0.114836\n",
+      "residential pedestrian       0.097656\n",
+      "cycleway service             0.093506\n",
+      "unclassified primary_link    0.087553\n",
+      "footway platform             0.064679\n",
+      "track path                   0.064448\n",
+      "primary_link                 0.049448\n",
+      "path pedestrian              0.044141\n",
+      "steps path                   0.034824\n",
+      "secondary_link               0.018648\n",
+      "steps                        0.003908\n",
+      "Tot: 271.1423523451751\n"
+     ]
+    }
+   ],
    "source": [
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
     "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
@@ -335,17 +431,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "f7ae7804",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "311.62307578992255"
+       "163.68542361150523"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,249 +972,6 @@
    "source": [
     "conteggi = gpd.GeoDataFrame(conteggi, geometry=\"geometry\", crs=CRS_GRAD)\n",
     "conteggi.to_file(PATH_SCORE_X_MUNICIPI, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "38323186",
-   "metadata": {},
-   "source": [
-    "### Da qui"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3270814",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ..........\n",
-    "colonne = []\n",
-    "for poi in parametro:\n",
-    "    colonne.append(poi[\"colonna\"])\n",
-    "\n",
-    "n_poi = 1\n",
-    "\n",
-    "gdfs = []\n",
-    "for poi in parametro:\n",
-    "    colonne.append(poi[\"gdf\"])\n",
-    "\n",
-    "# -------------\n",
-    "parametro = [\n",
-    "    {\"gdf:\": gpd.read_file()},\n",
-    "    \"tipo\": \"parchi\",\n",
-    "    {\"gdf:\": gpd.read_file()}\n",
-    "    \"tipo\": \"impianti\",\n",
-    "    {\"gdf:\": gpd.read_file(),\n",
-    "     \"tipo\": \"aree gioco\",},\n",
-    " ]\n",
-    "\n",
-    "list_gdf = []\n",
-    "for gdf in gdfs:\n",
-    "    list_gdf.append({\"gdf\": get_near_poi(gdf, [1,2,5,2,5]),\n",
-    "                     \"tipo\": \"parchi\"})\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "id": "94e6e29f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "colonne = [\"parchi\", \"impianti_sportivi\", \"aree_gioco\"]\n",
-    "conteggi_sport = conteggi[colonne].copy()\n",
-    "conteggi_sport[\"Totale\"] = conteggi_sport.sum(axis=1)\n",
-    "totale_poi_gdf = int(conteggi_sport[\"Totale\"].sum())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6b30063d",
-   "metadata": {},
-   "source": [
-    "numero_colonna : numero_totale = x : numero_massimo_poi"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ca5e7b56",
-   "metadata": {},
-   "source": [
-    "x = numero_colonna * numero_massimo_poi / numero_totale"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "091ee008",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_poi = 30\n",
-    "def converti_totale(row):\n",
-    "    # Da inserire nella formula anche le variabili di:\n",
-    "    # Inquinamento e incidenti\n",
-    "    risultato = int(row[\"Totale\"]*max_poi/totale_poi_gdf)\n",
-    "    if risultato == 0:\n",
-    "        return 1\n",
-    "    return risultato\n",
-    "\n",
-    "conteggi_sport[\"nuovo_totale\"] = conteggi_sport.apply(converti_totale)\n",
-    "conteggi_sport[\"MUNICIPIO\"] = conteggi_sport.index +1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
-   "id": "d361f714",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>tipo</th>\n",
-       "      <th>parchi</th>\n",
-       "      <th>impianti_sportivi</th>\n",
-       "      <th>aree_gioco</th>\n",
-       "      <th>Totale</th>\n",
-       "      <th>nuovo_totale</th>\n",
-       "      <th>MUNICIPIO</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>49</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>74</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>112</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>104</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>127</td>\n",
-       "      <td>3</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>127</td>\n",
-       "      <td>3</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>155</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>185</td>\n",
-       "      <td>5</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "tipo  parchi  impianti_sportivi  aree_gioco  Totale  nuovo_totale  MUNICIPIO\n",
-       "0          1                  0           0      49             1          1\n",
-       "1          1                  1           0      84             2          2\n",
-       "2          1                  1           0      74             2          3\n",
-       "3          1                  1           1     112             3          4\n",
-       "4          1                  1           1     104             3          5\n",
-       "5          1                  1           1     127             3          6\n",
-       "6          1                  1           1     127             3          7\n",
-       "7          2                  1           1     155             4          8\n",
-       "8          2                  2           1     185             5          9"
-      ]
-     },
-     "execution_count": 111,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for idx, row in conteggi_sport.iterrows():\n",
-    "    divisione = int(row[\"nuovo_totale\"] / len(colonne))\n",
-    "    for i in range(len(colonne)):\n",
-    "        conteggi_sport.iloc[idx, i] = divisione\n",
-    "    resto = row[\"nuovo_totale\"] % len(colonne)\n",
-    "    for i in range(resto):\n",
-    "        conteggi_sport.iloc[idx, i] += 1\n",
-    "\n",
-    "conteggi_sport"
    ]
   }
  ],
