--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "41dd31f4",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29aa33c3",
    "metadata": {},
    "outputs": [],
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dad88be7",
    "metadata": {},
    "outputs": [],
@@ -251,9 +251,10 @@
     "gdf_municipi = gpd.read_file(PATH_MUNICIPI_CLEAN)[[\"MUNICIPIO\", \"geometry\"]]\n",
     "gdf_inquinamento_municipi = gpd.sjoin(gdf_inquinamento_municipi, gdf_municipi, \"left\", predicate=\"intersects\").drop([\"index_right\"], axis=1)\n",
     "\n",
-    "gdf_inquinamento_municipi.loc[gdf_inquinamento_municipi[\"MUNICIPIO\"].isna(), \"MUNICIPIO\"] = 6\n",
+    "gdf_inquinamento_municipi.loc[gdf_inquinamento_municipi[\"MUNICIPIO\"].isna(), \"MUNICIPIO\"] = \"6\"\n",
     "gdf_inquinamento_municipi[\"MUNICIPIO\"]= gdf_inquinamento_municipi[\"MUNICIPIO\"].astype(int)\n",
     "gdf_inquinamento_municipi = gdf_inquinamento_municipi.sort_values(\"MUNICIPIO\")\n",
+    "gdf_inquinamento_municipi[\"MUNICIPIO\"]= gdf_inquinamento_municipi[\"MUNICIPIO\"].astype(str)\n",
     "\n",
     "for idx, row in gdf_inquinamento_municipi.iterrows():\n",
     "    for idx_municipio, row_municipio in gdf_municipi.iterrows():\n",
