--- a/Scripts/Punti_di_interesse.ipynb
+++ b/Scripts/Punti_di_interesse.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "e4ded582",
    "metadata": {},
    "outputs": [],
@@ -82,12 +82,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "36044d24",
    "metadata": {},
    "outputs": [],
    "source": [
     "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(CRS_GRAD)\n",
+    "gdf[\"MUNICIPIO\"] = gdf[\"MUNICIPIO\"].astype(str)\n",
     "gdf.to_file(PATH_MUNICIPI_CLEAN)"
    ]
   },
