aggiunto filtro inquinamento incidenti

--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "c774a8e6",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "id": "45efc912",
    "metadata": {},
    "outputs": [],
@@ -279,9 +279,11 @@
     "    G_sport = pickle.load(file)\n",
     "\n",
     "Graph_functions.auto_filter_poi(G_percorsi=G_sport,\n",
-    "                                max_pois=2493,\n",
-    "                                PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING,\n",
-    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+    "                                max_pois=400,\n",
+    "                                peso_inquinamento_vs_incidenti=0,\n",
+    "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
+    "                                PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING.replace(\".pickle\", \"_filtrato.pickle\"),\n",
+    "                                PATH_GEOJSON=PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN.replace(\".geojson\", \"_filtrato.geojson\"))"
    ]
   },
   {
@@ -294,27 +296,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 55,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN)"
+    "gdf_analisi_sport = gpd.read_file(PATH_SPORT_TEMPO_LIBERO_ANALISI_CLEAN.replace(\".geojson\", \"_filtrato.geojson\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 56,
    "id": "87e261e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1017"
+       "399"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -361,56 +363,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "04596a5f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               length\n",
-      "highway                              \n",
-      "cycleway                   106.136907\n",
-      "footway                    103.867943\n",
-      "residential                 19.204149\n",
-      "tertiary                    10.608167\n",
-      "secondary                    9.876533\n",
-      "primary                      4.163965\n",
-      "service                      3.504462\n",
-      "path                         2.804117\n",
-      "track                        2.572541\n",
-      "pedestrian                   2.249762\n",
-      "footway steps                0.864656\n",
-      "footway service              0.609993\n",
-      "cycleway footway             0.502098\n",
-      "residential cycleway         0.433831\n",
-      "residential footway          0.423629\n",
-      "footway pedestrian           0.389862\n",
-      "footway path                 0.331549\n",
-      "proposed footway service     0.320628\n",
-      "unclassified                 0.307231\n",
-      "cycleway path                0.290587\n",
-      "residential secondary        0.276889\n",
-      "track service                0.234979\n",
-      "pedestrian path              0.190611\n",
-      "residential service          0.153563\n",
-      "service path                 0.150053\n",
-      "tertiary_link                0.114836\n",
-      "residential pedestrian       0.097656\n",
-      "cycleway service             0.093506\n",
-      "unclassified primary_link    0.087553\n",
-      "footway platform             0.064679\n",
-      "track path                   0.064448\n",
-      "primary_link                 0.049448\n",
-      "path pedestrian              0.044141\n",
-      "steps path                   0.034824\n",
-      "secondary_link               0.018648\n",
-      "steps                        0.003908\n",
-      "Tot: 271.1423523451751\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
     "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
@@ -431,23 +387,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 59,
    "id": "f7ae7804",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "163.68542361150523"
+       "65.58963125982397"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "float(gdf_analisi_sport_mod[gdf_analisi_sport_mod[\"ciclabile\"] == \"False\"][\"length\"].sum()/1000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dd034f0",
+   "metadata": {},
+   "source": [
+    "Numero poi per municipio che sono stati connessi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "b0446036",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   MUNICIPIO  poi     length  Incidenti  n_poi\n",
+      "0          1   48  15.726515        859     49\n",
+      "1          2   31  15.419524        567     84\n",
+      "2          3   56  20.692406       1014     74\n",
+      "3          4   38  16.170125        691    112\n",
+      "4          5   35  14.957407        638    104\n",
+      "5          6   39  18.109771        698    127\n",
+      "6          7   45  16.692378        806    127\n",
+      "7          8   55  29.429041        996    155\n",
+      "8          9   52  24.071097        947    185\n"
+     ]
+    }
+   ],
+   "source": [
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport.groupby(\"MUNICIPIO\").agg({\n",
+    "    \"poi\": \"sum\",\n",
+    "    \"length\": lambda x: sum(x)/1000\n",
+    "}).reset_index()\n",
+    "gdf_analisi_sport_raggruppato[\"MUNICIPIO\"] = gdf_analisi_sport_raggruppato[\"MUNICIPIO\"].astype(int)\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport_raggruppato.sort_index()\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport_raggruppato.merge(\n",
+    "    gpd.read_file(PATH_INCIDENTI_CLEAN)[[\"MUNICIPIO\", \"Incidenti\"]], on=\"MUNICIPIO\")\n",
+    "\n",
+    "gdf_pois = gpd.read_file(PATH_SCORE_X_MUNICIPI)[[\"MUNICIPIO\", \"parchi\", \"impianti_sportivi\", \"aree_gioco\"]]\n",
+    "gdf_pois[\"n_poi\"] = gdf_pois.drop(\"MUNICIPIO\", axis=1).sum(axis=1)\n",
+    "gdf_pois[\"MUNICIPIO\"] = gdf_pois[\"MUNICIPIO\"].astype(int)\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport_raggruppato.merge(gdf_pois[[\"MUNICIPIO\", \"n_poi\"]], on=\"MUNICIPIO\")\n",
+    "print(gdf_analisi_sport_raggruppato)\n"
    ]
   },
   {
