--- a/Scripts/Incidenti.ipynb
+++ b/Scripts/Incidenti.ipynb
@@ -21,33 +21,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "28aac848",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Raw\n",
-    "PATH_INCIDENTI_MESE_MUNICIPIO_RAW = \"../Data/Raw/Incidenti/incidenti_mese_municipio.csv\"\n",
-    "PATH_INCIDENTI_VEICOLI_GIORNO_RAW = \"../Data/Raw/Incidenti/incidenti_veicoliCoinvolti_giorno.csv\"\n",
-    "\n",
-    "#Staging\n",
-    "PATH_INCIDENTI_MESE_MUNICIPIO_STAGING = \"../Data/Staging/Incidenti/incidenti_mese_municipio.geojson\"\n",
-    "PATH_INCIDENTI_VEICOLI_GIORNO_STAGING = \"../Data/Staging/Incidenti/incidenti_veicoliCoinvolti_giorno.geojson\"\n",
-    "\n",
-    "#Clean\n",
-    "PATH_INCIDENTI_CLEAN = \"../Data/Clean/Incidenti/incidenti_clean.csv\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "1afc6eef",
-   "metadata": {},
-   "source": [
-    "## Incidenti_mese_municipio"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ee278583",
    "metadata": {},
@@ -65,17 +38,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "id": "2af9a378",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_mese_municipio = gpd.pd.read_csv(PATH_INCIDENTI_MESE_MUNICIPIO_RAW, sep=\";\")\n",
-    "df_mese_municipio = df_mese_municipio[df_mese_municipio[\"Municipio\"].notna()]\n",
-    "df_mese_municipio[\"Municipio\"] = df_mese_municipio[\"Municipio\"].astype(int)\n",
+    "df_mese_municipio = gpd.pd.read_csv(PATH_INCIDENTI_RAW, sep=\";\")\n",
+    "df_mese_municipio = df_mese_municipio.rename(columns={\"Municipio\": \"MUNICIPIO\"})\n",
+    "df_mese_municipio = df_mese_municipio[df_mese_municipio[\"MUNICIPIO\"].notna()]\n",
+    "df_mese_municipio[\"MUNICIPIO\"] = df_mese_municipio[\"MUNICIPIO\"].astype(int)\n",
     "df_mese_municipio = df_mese_municipio[df_mese_municipio[\"Anno\"] == 2023]\n",
     "df_mese_municipio = df_mese_municipio.drop(columns=[\"Anno\", \"Mese\"])\n",
-    "df_mese_municipio = df_mese_municipio.groupby(\"Municipio\", as_index=False).sum().reset_index(drop=True)"
+    "df_mese_municipio = df_mese_municipio.groupby(\"MUNICIPIO\", as_index=False).sum().reset_index(drop=True)"
    ]
   },
   {
@@ -89,22 +63,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "5a8043aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_MUNICIPI_RAW).to_crs(\"EPSG:4326\").drop([\"AREA\", \"PERIMETRO\"], axis=1).sort_values(\"MUNICIPIO\").reset_index(drop=True)\n",
-    "df_mese_municipio[\"geometry\"] = gdf[\"geometry\"]\n",
-    "gpd.GeoDataFrame(df_mese_municipio, geometry=\"geometry\", crs=\"EPSG:4326\").to_file(PATH_INCIDENTI_MESE_MUNICIPIO_STAGING, driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d0bbd67b",
-   "metadata": {},
-   "source": [
-    "## Incidenti_veicoliCoinvolti_giorno"
+    "gdf_municipi = gpd.read_file(PATH_MUNICIPI_CLEAN).to_crs(CRS_GRAD).drop([\"AREA\", \"PERIMETRO\"], axis=1)\n",
+    "\n",
+    "gdf_municipi[\"MUNICIPIO\"] = gdf_municipi[\"MUNICIPIO\"].astype(int)\n",
+    "gdf_municipi = gdf_municipi.sort_values(\"MUNICIPIO\").reset_index(drop=True)\n",
+    "\n",
+    "df_mese_municipio[\"geometry\"] = gdf_municipi[\"geometry\"]\n",
+    "gpd.GeoDataFrame(df_mese_municipio, geometry=\"geometry\", crs=CRS_GRAD).to_file(PATH_INCIDENTI_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
