--- a/Scripts/Inquinamento.ipynb
+++ b/Scripts/Inquinamento.ipynb
@@ -153,12 +153,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "548c45d8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(PATH_INQUINAMENTO_INGESTION_RAW, 'w') as file:\n",
+    "with open(PATH_INQUINAMENTO_RAW, 'w') as file:\n",
     "    json.dump(geojson, file, indent=4)"
    ]
   },
@@ -196,7 +196,7 @@
     "            row[pm] = None\n",
     "    return row\n",
     "\n",
-    "gdf = gpd.read_file(PATH_INQUINAMENTO_INGESTION_RAW)\n",
+    "gdf = gpd.read_file(PATH_INQUINAMENTO_RAW)\n",
     "gdf = gpd.GeoDataFrame(gdf.apply(set_mean_pm, axis=1), geometry=gdf.geometry.name, crs=CRS_GRAD)\n",
     "\n",
     "# Eliminiamo la \"stazione\" che identifica milano in generale, non una vera stazione\n",
@@ -218,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf.to_file(PATH_INQUINAMENTO_INGESTION_CLEAN, driver=\"GeoJSON\")"
+    "gdf.to_file(PATH_INQUINAMENTO_STAGING, driver=\"GeoJSON\")"
    ]
   },
   {
@@ -236,7 +236,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf = gpd.read_file(PATH_INQUINAMENTO_INGESTION_CLEAN)"
+    "gdf = gpd.read_file(PATH_INQUINAMENTO_STAGING)"
    ]
   },
   {
@@ -263,7 +263,7 @@
     "        gdf_inquinamento_municipi.loc[idx, \"geometry\"] = geometry\n",
     "gdf_inquinamento_municipi\n",
     "conteggi = gpd.GeoDataFrame(gdf_inquinamento_municipi.groupby(['MUNICIPIO', 'geometry']).mean().reset_index(), crs=CRS_GRAD)\n",
-    "conteggi.to_file(PATH_INQUINAMENTO_MEDIA_MUNICIPI_CLEAN, driver=\"GeoJSON\")"
+    "conteggi.to_file(PATH_INQUINAMENTO_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
