--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "76a32828",
    "metadata": {},
    "outputs": [],
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
@@ -195,36 +195,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "71167ae6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_strade = Graph_functions._custom_graph_to_gdf(G_strade)"
+    "gdf_strade = Graph_functions._custom_graph_to_gdf(G_strade)\n",
+    "gdf_strade.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING.replace(\".geojson\", \"_prov.geojson\"), driver=\"GeoJSON\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "832886fa",
+   "execution_count": 16,
+   "id": "eb8d4669",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_strade.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING, driver=\"GeoJSON\")\n",
-    "\n",
     "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_strade, f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3075f4f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gdf_strade = gpd.read_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING)\n",
-    "gdf_strade"
    ]
   },
   {
