--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "da77dda3",
    "metadata": {},
    "outputs": [],
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "id": "45efc912",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
     "    G_sport = pickle.load(file)\n",
     "\n",
     "Graph_functions.auto_filter_poi(G_percorsi=G_sport,\n",
-    "                                max_pois=400,\n",
+    "                                max_pois=2000,\n",
     "                                peso_inquinamento_vs_incidenti=0,\n",
     "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
     "                                PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING.replace(\".pickle\", \"_filtrato.pickle\"),\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
@@ -306,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 29,
    "id": "87e261e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "399"
+       "1016"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -363,10 +363,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "04596a5f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                              length\n",
+      "highway                             \n",
+      "footway                   128.450705\n",
+      "cycleway                  111.492449\n",
+      "residential                28.247296\n",
+      "tertiary                   15.545627\n",
+      "secondary                  10.874823\n",
+      "primary                     7.358557\n",
+      "service                     4.172539\n",
+      "track                       3.354185\n",
+      "pedestrian                  2.995920\n",
+      "path                        2.655366\n",
+      "cycleway footway            0.644924\n",
+      "footway pedestrian          0.581565\n",
+      "residential footway         0.521411\n",
+      "footway steps               0.486676\n",
+      "footway path                0.464369\n",
+      "footway service             0.460438\n",
+      "residential cycleway        0.434286\n",
+      "cycleway path               0.291043\n",
+      "track service               0.234884\n",
+      "unclassified                0.170249\n",
+      "service path                0.149921\n",
+      "residential secondary       0.127337\n",
+      "pedestrian path             0.118616\n",
+      "unclassified residential    0.116679\n",
+      "tertiary_link               0.112982\n",
+      "residential pedestrian      0.097594\n",
+      "residential service         0.094434\n",
+      "cycleway service            0.093463\n",
+      "residential path            0.088701\n",
+      "primary_link                0.046211\n",
+      "secondary_link              0.018685\n",
+      "unclassified tertiary       0.014137\n",
+      "steps                       0.006807\n",
+      "Tot: 320.52288164630255\n"
+     ]
+    }
+   ],
    "source": [
     "# Raggruppiamo per \"highway\" e calcoliamo (in km -> /1000) la lunghezza complessiva delle strade\n",
     "gdf_analisi_sport_mod_most_highways = gdf_analisi_sport_mod.to_crs(CRS_METR).groupby(\"highway\").agg({\n",
@@ -387,17 +430,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 32,
    "id": "f7ae7804",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "65.58963125982397"
+       "207.56671708556138"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 33,
    "id": "b0446036",
    "metadata": {},
    "outputs": [
@@ -424,16 +467,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "   MUNICIPIO  poi     length  Incidenti  n_poi\n",
-      "0          1   48  15.726515        859     49\n",
-      "1          2   31  15.419524        567     84\n",
-      "2          3   56  20.692406       1014     74\n",
-      "3          4   38  16.170125        691    112\n",
-      "4          5   35  14.957407        638    104\n",
-      "5          6   39  18.109771        698    127\n",
-      "6          7   45  16.692378        806    127\n",
-      "7          8   55  29.429041        996    155\n",
-      "8          9   52  24.071097        947    185\n"
+      "   MUNICIPIO  poi     length  Incidenti  tot      % poi\n",
+      "8          9  185  56.040036        947  185  18.208661\n",
+      "7          8  155  55.953174        996  155  15.255906\n",
+      "6          7  127  50.535512        806  127  12.500000\n",
+      "5          6  127  47.895036        698  127  12.500000\n",
+      "3          4  112  37.480188        691  112  11.023622\n",
+      "4          5  104  41.940940        638  104  10.236220\n",
+      "1          2   83  32.975840        567   84   8.169291\n",
+      "2          3   74  26.721103       1014   74   7.283465\n",
+      "0          1   49  17.861279        859   49   4.822835\n"
      ]
     }
    ],
@@ -448,9 +491,12 @@
     "    gpd.read_file(PATH_INCIDENTI_CLEAN)[[\"MUNICIPIO\", \"Incidenti\"]], on=\"MUNICIPIO\")\n",
     "\n",
     "gdf_pois = gpd.read_file(PATH_SCORE_X_MUNICIPI)[[\"MUNICIPIO\", \"parchi\", \"impianti_sportivi\", \"aree_gioco\"]]\n",
-    "gdf_pois[\"n_poi\"] = gdf_pois.drop(\"MUNICIPIO\", axis=1).sum(axis=1)\n",
+    "gdf_pois[\"tot\"] = gdf_pois.drop(\"MUNICIPIO\", axis=1).sum(axis=1)\n",
     "gdf_pois[\"MUNICIPIO\"] = gdf_pois[\"MUNICIPIO\"].astype(int)\n",
-    "gdf_analisi_sport_raggruppato = gdf_analisi_sport_raggruppato.merge(gdf_pois[[\"MUNICIPIO\", \"n_poi\"]], on=\"MUNICIPIO\")\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport_raggruppato.merge(gdf_pois[[\"MUNICIPIO\", \"tot\"]], on=\"MUNICIPIO\")\n",
+    "somma_poi = gdf_analisi_sport_raggruppato[\"poi\"].sum()\n",
+    "gdf_analisi_sport_raggruppato[\"% poi\"] = gdf_analisi_sport_raggruppato.apply(lambda row: row[\"poi\"] / somma_poi * 100, axis=1)\n",
+    "gdf_analisi_sport_raggruppato.sort_values([\"poi\", \"Incidenti\", \"length\"], ascending=False, inplace=True)\n",
     "print(gdf_analisi_sport_raggruppato)\n"
    ]
   },
