--- a/Scripts/Analisi.ipynb
+++ b/Scripts/Analisi.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "45efc912",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
     "    G_sport = pickle.load(file)\n",
     "\n",
     "Graph_functions.auto_filter_poi(G_percorsi=G_sport,\n",
-    "                                max_pois=2000,\n",
+    "                                max_pois=400,\n",
     "                                peso_inquinamento_vs_incidenti=0,\n",
     "                                peso_fattori_esterni_vs_distribuzione_poi=1,\n",
     "                                PATH_PICKLE=PATH_SPORT_TEMPO_LIBERO_ANALISI_PICKLE_STAGING.replace(\".pickle\", \"_filtrato.pickle\"),\n",
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "9d1ce163",
    "metadata": {},
    "outputs": [],
@@ -306,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "87e261e2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1016"
+       "400"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 15,
    "id": "88d01772",
    "metadata": {},
    "outputs": [],
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 16,
    "id": "04596a5f",
    "metadata": {},
    "outputs": [
@@ -371,42 +371,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                              length\n",
-      "highway                             \n",
-      "footway                   128.450705\n",
-      "cycleway                  111.492449\n",
-      "residential                28.247296\n",
-      "tertiary                   15.545627\n",
-      "secondary                  10.874823\n",
-      "primary                     7.358557\n",
-      "service                     4.172539\n",
-      "track                       3.354185\n",
-      "pedestrian                  2.995920\n",
-      "path                        2.655366\n",
-      "cycleway footway            0.644924\n",
-      "footway pedestrian          0.581565\n",
-      "residential footway         0.521411\n",
-      "footway steps               0.486676\n",
-      "footway path                0.464369\n",
-      "footway service             0.460438\n",
-      "residential cycleway        0.434286\n",
-      "cycleway path               0.291043\n",
-      "track service               0.234884\n",
-      "unclassified                0.170249\n",
-      "service path                0.149921\n",
-      "residential secondary       0.127337\n",
-      "pedestrian path             0.118616\n",
-      "unclassified residential    0.116679\n",
-      "tertiary_link               0.112982\n",
-      "residential pedestrian      0.097594\n",
-      "residential service         0.094434\n",
-      "cycleway service            0.093463\n",
-      "residential path            0.088701\n",
-      "primary_link                0.046211\n",
-      "secondary_link              0.018685\n",
-      "unclassified tertiary       0.014137\n",
-      "steps                       0.006807\n",
-      "Tot: 320.52288164630255\n"
+      "                                 length\n",
+      "highway                                \n",
+      "cycleway                     100.661339\n",
+      "footway                       66.219267\n",
+      "residential                   14.011855\n",
+      "tertiary                      11.996346\n",
+      "secondary                      7.781333\n",
+      "track                          3.195524\n",
+      "pedestrian                     2.116348\n",
+      "primary                        2.018947\n",
+      "service                        1.769118\n",
+      "path                           1.010400\n",
+      "cycleway footway               0.453654\n",
+      "footway service                0.451056\n",
+      "footway pedestrian             0.359980\n",
+      "footway steps                  0.330102\n",
+      "cycleway path                  0.291043\n",
+      "residential secondary          0.277534\n",
+      "residential pedestrian         0.243722\n",
+      "footway path                   0.177522\n",
+      "pedestrian path                0.118616\n",
+      "tertiary_link                  0.117791\n",
+      "residential footway            0.111161\n",
+      "unclassified                   0.107320\n",
+      "residential service            0.094434\n",
+      "cycleway service               0.093463\n",
+      "residential footway service    0.077618\n",
+      "residential cycleway           0.052162\n",
+      "primary_link                   0.046211\n",
+      "unclassified tertiary          0.014137\n",
+      "steps                          0.003917\n",
+      "Tot: 214.20192384734432\n"
      ]
     }
    ],
@@ -430,17 +426,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 17,
    "id": "f7ae7804",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "207.56671708556138"
+       "112.65026341818994"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,34 +450,17 @@
    "id": "1dd034f0",
    "metadata": {},
    "source": [
-    "Numero poi per municipio che sono stati connessi"
+    "Numero poi per municipio che sono stati connessi e % poi connessi in ogni municipio rispetto al totale connesso"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "b0446036",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   MUNICIPIO  poi     length  Incidenti  tot      % poi\n",
-      "8          9  185  56.040036        947  185  18.208661\n",
-      "7          8  155  55.953174        996  155  15.255906\n",
-      "6          7  127  50.535512        806  127  12.500000\n",
-      "5          6  127  47.895036        698  127  12.500000\n",
-      "3          4  112  37.480188        691  112  11.023622\n",
-      "4          5  104  41.940940        638  104  10.236220\n",
-      "1          2   83  32.975840        567   84   8.169291\n",
-      "2          3   74  26.721103       1014   74   7.283465\n",
-      "0          1   49  17.861279        859   49   4.822835\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "gdf_analisi_sport_raggruppato = gdf_analisi_sport.groupby(\"MUNICIPIO\").agg({\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport.groupby([\"MUNICIPIO\"]).agg({\n",
     "    \"poi\": \"sum\",\n",
     "    \"length\": lambda x: sum(x)/1000\n",
     "}).reset_index()\n",
@@ -498,6 +477,84 @@
     "gdf_analisi_sport_raggruppato[\"% poi\"] = gdf_analisi_sport_raggruppato.apply(lambda row: row[\"poi\"] / somma_poi * 100, axis=1)\n",
     "gdf_analisi_sport_raggruppato.sort_values([\"poi\", \"Incidenti\", \"length\"], ascending=False, inplace=True)\n",
     "print(gdf_analisi_sport_raggruppato)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07bb8d32",
+   "metadata": {},
+   "source": [
+    "Dettaglio sulla quantità di \"tipo di poi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "9b200a7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tipo</th>\n",
+       "      <th>poi</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>aree_gioco</td>\n",
+       "      <td>263</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>impianti_sportivi</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>parchi</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                tipo  poi\n",
+       "0         aree_gioco  263\n",
+       "1  impianti_sportivi  101\n",
+       "2             parchi   36"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gdf_analisi_sport = gdf_analisi_sport[gdf_analisi_sport[\"tipo\"] != \"Strade_ciclabili\"]\n",
+    "gdf_analisi_sport_raggruppato = gdf_analisi_sport.groupby(\"tipo\").agg({\n",
+    "    \"poi\": \"sum\"}).reset_index().sort_values([\"poi\"], ascending=[False])\n",
+    "gdf_analisi_sport_raggruppato"
    ]
   },
   {
