--- a/Scripts/Rete_ciclabile_stradale.ipynb
+++ b/Scripts/Rete_ciclabile_stradale.ipynb
@@ -37,7 +37,7 @@
    "id": "e61d6978",
    "metadata": {},
    "source": [
-    "### Piste ciclabili"
+    "### Piste ciclabili *NON PIU' USATO"
    ]
   },
   {
@@ -176,13 +176,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "ae1289aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Il tutto compattato in questa chiamata a funzione.\n",
     "G_strade = Graph_functions.etl_strade_ciclabili()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d2bf8f3e",
+   "metadata": {},
+   "source": [
+    "Usiamo la nostra funzione per convertire il grafo in gdf, che oltre a convertire gli archi in geodataframe esegue:\n",
+    "1. **Eliminazione** delle eventuali **\"liste\"** di elementi rendendole delle stringhe concatenate.\n",
+    "2. Interpolazione con geometria dei Municipi (con eventuale spezzettamento delle LineString delle strade a cavallo su più Municipi), \n",
+    "    e quindi **aggiunta** della colonna **\"MUNICIPI\"** per ogni strada (utile per join di visualizzazione)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abe7108b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gdf_strade = Graph_functions._custom_graph_to_gdf(G_strade)"
    ]
   },
   {
@@ -195,94 +215,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "71167ae6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gdf_strade = Graph_functions._custom_graph_to_gdf(G_strade)\n",
-    "gdf_strade.to_file(PATH_STRADE_CICLABILI_GEOJSON_STAGING.replace(\".geojson\", \"_prov.geojson\"), driver=\"GeoJSON\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "eb8d4669",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "gdf_strade.to_file(PATH_STRADE_CICLABILI_GEOJSON_CLEAN, driver=\"GeoJSON\")\n",
     "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"wb\") as f:\n",
     "    pickle.dump(G_strade, f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ea1fcf94",
-   "metadata": {},
-   "source": [
-    "### Unione Ciclabili e Strade"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c3c76a6e",
-   "metadata": {},
-   "source": [
-    "Load da staging i 2 Grafi:\n",
-    "- Piste **Ciclabili**\n",
-    "- **Strade** in cui è permesso usare la bici"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "05c4ae6e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Carichiamo Graph Ciclabili\n",
-    "with open(PATH_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
-    "    G_ciclabili = pickle.load(f)\n",
-    "\n",
-    "# Carichiamo Graph Strade\n",
-    "with open(PATH_STRADE_CICLABILI_PICKLE_STAGING, \"rb\") as f:\n",
-    "    G_strade = pickle.load(f)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "76f1bb06",
-   "metadata": {},
-   "source": [
-    "1. Unione dei due Grafi tramite: **nx.compose()**.\n",
-    "2. Aggiunta di archi artificiali per unire i nodi dei 2 Grafi, in modo che possano essere \"comunicanti\"  \n",
-    "(si possa passare da un arco \"strade\" a un arco \"ciclabili\" e viceversa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "57579f46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G_compose = Graph_functions.connetti_due_grafi(G_strade, G_ciclabili, weight_moltiplicator=1,\n",
-    "                                                tipo = \"Join_ciclabile_strade\",\n",
-    "                                                artificiale=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "37cd9e16",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(PATH_RETE_CICLABILE_COMPLETA_PICKLE_CLEAN, \"wb\") as f:\n",
-    "    pickle.dump(G_compose, f)\n",
-    "\n",
-    "gdf_compose = ox.graph_to_gdfs(G_compose, edges=True, nodes=False).reset_index().drop([\"u\",\"v\", \"key\"], axis=1)\n",
-    "gdf_compose.to_file(PATH_RETE_CICLABILE_COMPLETA_GEOJSON_CLEAN, driver=\"GeoJSON\")"
    ]
   }
  ],
